<select>: ignore modified keydown events in some cases

For example, don't mark Alt + left/right handled so that back/forward
continue to work when a <select> is focused.

R=tkent@chromium.org
BUG=666179

Review-Url: https://codereview.chromium.org/2511923002
Cr-Commit-Position: refs/heads/master@{#433589}