third_party/WebKit/Source/core/html/HTMLSelectElement.cpp
@@ -1288,6 +1288,11 @@ void HTMLSelectElement::menuListDefaultEventHandler(Event* event) {
         !isSpatialNavigationEnabled(document().frame()))
       return;
 
+    int ignoreModifiers = PlatformEvent::ShiftKey | PlatformEvent::CtrlKey |
+                          PlatformEvent::AltKey | PlatformMouseEvent::MetaKey;
+    if (keyEvent->modifiers() & ignoreModifiers)
+      return;
+
     const String& key = keyEvent->key();
     bool handled = true;
     const ListItems& listItems = this->listItems();
